@@ -7,6 +7,12 @@ Version 3.3.0
     to an executable by packaging compiled generated code into a static
     (archive) library.
 
+ C++/Serializer
+
+  * New functions, format() and precision(), allow changing of the
+    output notation and precision for the float, double, and decimal
+    type serializers.
+
 Version 3.2.0
 
   * Support for ISO-8859-1 in addition to UTF-8 as application encoding.
